--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/google-gtag": "^1.0.4",
     "core-js": "^3.19.3",
     "gsap": "^3.9.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-gtag": "^2.0.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
